# cockpit-abrt

./: Makefile.am  README  README.md  configure.ac
abrt/: abrt.css  abrt.html  abrt.js  manifest.json
package/: cockpit-abrt.spec
